[project]
name = "pyno_logger"
version = "0.0.10"
authors = [
  { name="Ben Miner", email="ben@getampt.com" },
]
description = "A JSON logger for Python, inspired by Pino."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/benminer/pyno-logger"
"Bug Tracker" = "https://github.com/benminer/pyno-logger/issues"